# CB_SPL_Compiler

spl-compiler-skeleton/.submitscript/data/: config.json
spl-compiler-skeleton/c/: CMakeLists.txt
spl-compiler-skeleton/c/src/: command_line_options.c  command_line_options.h
spl-compiler-skeleton/c/src/absyn/: _declarations.h  absyn.h  expressions.c  expressions.h  global_definitions.c  global_definitions.h  lists.c  lists.h  parameter_definition.c  parameter_definition.h  program.c  program.h  statements.h  type_expressions.c  type_expressions.h  variable_definition.c  variable_definition.h  variables.h
spl-compiler-skeleton/c/src/phases/_01_scanner/: scanner.flex
spl-compiler-skeleton/c/src/phases/_02_03_parser/: parser.y
spl-compiler-skeleton/c/src/phases/_04a_tablebuild/: tablebuild.c  tablebuild.h
spl-compiler-skeleton/c/src/phases/_05_varalloc/: stack_layout.c  varalloc.c
spl-compiler-skeleton/c/src/table/: entry.h  table.c
spl-compiler-skeleton/c/src/types/: types.c  types.h
spl-compiler-skeleton/c/src/util/: errors.c  errors.h  string_ops.c  string_ops.h
spl-compiler-skeleton/haskell/: .gitignore  build.cabal
spl-compiler-skeleton/haskell/src/: CommandLineOptions.hs  Main.hs
spl-compiler-skeleton/haskell/src/Absyn/: BinaryOperator.hs  Declaration.hs  Expression.hs  Node.hs  Position.hs  Program.hs  Statement.hs  TypeExpression.hs  UnaryOperator.hs
spl-compiler-skeleton/haskell/src/Table/: SymbolTable.hs
spl-compiler-skeleton/haskell/src/Types/: HasType.hs  Type.hs
spl-compiler-skeleton/haskell/src/Utility/: AsciiTable.hs  SplError.hs
spl-compiler-skeleton/haskell/src/phases/_01_scanner/: Scanner.x  Token.hs
spl-compiler-skeleton/haskell/src/phases/_02_03_parser/: Parser.y
spl-compiler-skeleton/haskell/src/phases/_04a_tablebuild/: TableBuilder.hs  TableInitializer.hs
spl-compiler-skeleton/haskell/src/phases/_04b_semant/: ProcedureBodyChecker.hs
spl-compiler-skeleton/haskell/src/phases/_05_varalloc/: StackLayout.hs  VarAllocator.hs
spl-compiler-skeleton/haskell/src/phases/_06_codegen/: CodeGenerator.hs  CodePrinter.hs  Register.hs
spl-compiler-skeleton/java/src/main/java/de/thm/mni/compilerbau/: Main.java
spl-compiler-skeleton/java/test/: test1REF
spl-compiler-skeleton/kotlin/: pom.xml
spl-compiler-skeleton/kotlin/src/main/kotlin/de/thm/mni/compilerbau/: CommandLineOptions.kt  Main.kt
(+36 files in other folders)
